# Parser

./: .gitignore  README.md  classes.py  jobs_classes.py  main.py  pyproject.toml  requirments.txt  utils.py
classes/: Connector.py  Engine.py  SuperJob.py  Vacancy.py  cnctr.py  eng.py  hh.py  sj.py  utils.py  vac.py
utils/: classes.py  superjob.py
