[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["jkfknbchdx <denskillhigh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-request = "^1.6.2"
requests = "^2.28.2"
data = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
